[workspace]
members = [
    "crates/corint-core",
    "crates/corint-parser",
    "crates/corint-compiler",
    "crates/corint-runtime", "crates/corint-sdk", "crates/corint-server", "crates/corint-repository",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"

[workspace.package]
edition = "2021"
license = "Elastic-2.0"

[package]
name = "corint-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
corint-sdk = { path = "crates/corint-sdk" }
corint-parser = { path = "crates/corint-parser" }
corint-compiler = { path = "crates/corint-compiler" }
corint-runtime = { path = "crates/corint-runtime", features = ["sqlx"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[[example]]
name = "simple_rule"
path = "examples/simple_rule.rs"

[[example]]
name = "fraud_detection"
path = "examples/fraud_detection.rs"

[[example]]
name = "complete_pipeline"
path = "examples/complete_pipeline.rs"

# [[example]]
# name = "feature_datasource_example"
# path = "examples/feature_datasource_example.rs"

# [[example]]
# name = "postgres_datasource_example"
# path = "examples/postgres_datasource_example.rs"

[[example]]
name = "postgres_query_executor"
path = "examples/postgres_query_executor.rs"
required-features = ["sqlx"]

[[example]]
name = "postgres_query_executor_demo"
path = "examples/postgres_query_executor_demo.rs"
required-features = ["sqlx"]

[[example]]
name = "test_supabase_session_pooler"
path = "examples/test_supabase_session_pooler.rs"
required-features = ["sqlx"]

[[example]]
name = "supabase_feature_example"
path = "examples/supabase_feature_example.rs"
required-features = ["sqlx"]

[[example]]
name = "import_demo"
path = "examples/import_demo.rs"

[[example]]
name = "validate_imports"
path = "examples/validate_imports.rs"

[[example]]
name = "test_import_resolver"
path = "examples/test_import_resolver.rs"

[[example]]
name = "test_all_pipelines"
path = "examples/test_all_pipelines.rs"

[[example]]
name = "phase3_extends_demo"
path = "examples/phase3_extends_demo.rs"

[features]
default = []
sqlx = ["dep:sqlx"]
libsql = ["dep:reqwest"]
