[workspace]
members = [
    "crates/corint-core",
    "crates/corint-parser",
    "crates/corint-compiler",
    "crates/corint-runtime", "crates/corint-sdk", "crates/corint-server", "crates/corint-repository",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

[workspace.package]
edition = "2021"
license = "Elastic-2.0"

# Note: Root-level examples have been removed.
# Code examples are now located in individual crate examples/ directories:
# - crates/corint-runtime/examples/
# - crates/corint-sdk/examples/
# - etc.
