[package]
name = "corint-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "AST to IR compiler for CORINT Decision Engine"

[dependencies]
corint-core = { path = "../corint-core" }
corint-parser = { path = "../corint-parser" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
