[package]
name = "corint-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core types and definitions for CORINT Decision Engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
