[package]
name = "corint-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
corint-sdk = { path = "../corint-sdk" }
corint-core = { path = "../corint-core" }
corint-runtime = { path = "../corint-runtime" }
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
env_logger = "0.11"
