[package]
name = "corint-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "YAML parser for CORINT Decision Engine"

[dependencies]
corint-core = { path = "../corint-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
