[package]
name = "corint-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Runtime execution engine for CORINT Decision Engine"

[dependencies]
corint-core = { path = "../corint-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bigdecimal"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }

[features]
default = []
sqlx = ["dep:sqlx", "dep:bigdecimal"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[[example]]
name = "llm_providers"
path = "examples/llm_providers.rs"
