[package]
name = "corint-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Runtime execution engine for CORINT Decision Engine"

[dependencies]
corint-core = { path = "../corint-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "chrono", "bigdecimal", "macros"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }

# OpenTelemetry dependencies
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-prometheus = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", features = ["tokio", "grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }
prometheus = { version = "0.14", optional = true }

[features]
default = []
sqlx = ["dep:sqlx", "dep:bigdecimal"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-prometheus", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:prometheus"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[[example]]
name = "llm_providers"
path = "examples/llm_providers.rs"
