[package]
name = "corint-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Runtime execution engine for CORINT Decision Engine"

[dependencies]
corint-core = { path = "../corint-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "sqlite", "chrono", "bigdecimal", "macros"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
sqlx = ["dep:sqlx", "dep:bigdecimal"]
redis = ["dep:redis"]
clickhouse = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.10"
tracing-subscriber = "0.3"
