[package]
name = "corint-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SDK for CORINT Decision Engine - High-level API for decision making"

[dependencies]
corint-core = { path = "../corint-core" }
corint-parser = { path = "../corint-parser" }
corint-compiler = { path = "../corint-compiler" }
corint-runtime = { path = "../corint-runtime" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
