[package]
name = "corint-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SDK for CORINT Decision Engine - High-level API for decision making"

[dependencies]
corint-core = { path = "../corint-core" }
corint-parser = { path = "../corint-parser" }
corint-compiler = { path = "../corint-compiler" }
corint-runtime = { path = "../corint-runtime", optional = false }
corint-repository = { path = "../corint-repository" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "postgres"], optional = true }

[features]
default = []
sqlx = ["dep:sqlx", "corint-runtime/sqlx"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
