[package]
name = "corint-server"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[dependencies]
# Core dependencies
corint-sdk = { path = "../corint-sdk", features = ["sqlx"] }
corint-runtime = { path = "../corint-runtime", features = ["sqlx"] }
corint-core = { path = "../corint-core" }
corint-repository = { path = "../corint-repository", features = ["api"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"], optional = true }

# Other
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
postgres = ["corint-repository/postgres"]

[[bin]]
name = "corint-server"
path = "src/main.rs"
